# data-cleaner-pro

./: Quick Start  README.md  pyproject.toml  requirements.txt
docs/: README.md
examples/: 01_ecommerce_customer.py  02_sales_data_analysis  Validation_ex.py
src/: cleaner.py  config.py  utils
tests/: __init__.py  conftest.py  test_cleaner.py  test_validators.py  utils_(OPZ).py
